[package]
name = "hab-pkg-wrappers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
path-absolutize = "3.0.14"

[dev-dependencies]
tempdir = "0.3.7"

[profile.release]
opt-level = "z"
codegen-units = 1
strip = true
panic = "abort"
