[package]
name = "hab-pkg-wrappers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
exec = "0.3.1"
path-absolutize = "3.1.1"

[dev-dependencies]
tempdir = "0.3.7"

[profile.release]
opt-level = "z"
codegen-units = 1
strip = true
